--- a/frontend/contact-manager-frontend/package.json
+++ b/frontend/contact-manager-frontend/package.json
@@ -18,8 +18,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "daisyui": "^4.12.13",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
+    "eslint-plugin-react": "^7.37.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
